--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,13 +2,8 @@
 name = "amphion"
 description = "Amphion"
 license = { text = "MIT License" }
-requires-python = "=3.10"
-dynamic = ["version"]
-classifiers = [
-  "Development Status :: 4 - Beta",
-  "Natural Language :: English",
-  "Operating System :: OS Independent",
-]
+requires-python = "<= 3.10"
+version = "1.0.0"
 
 dependencies = [
   "setuptools",
