--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "amphion"
 description = "Amphion"
 license = { text = "MIT License" }
-requires-python = "<= 3.10"
+requires-python = ">= 3.10"
 version = "1.0.0"
 
 dependencies = [
