--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
   "numpy == 1.26.0",
   "scipy == 1.12.0",
   "librosa",
+  "safetensors",
   "encodec",
   "phonemizer",
   "g2p_en",
