--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ license = { text = "MIT License" }
 requires-python = ">= 3.10"
 version = "1.0.0"
 
+[tool.setuptools.packages.find]
+where = ["."]
+
 dependencies = [
   "setuptools",
   "natsort ~= 8.2.0",
