Refactor imports and update package configuration in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,5 @@ dependencies = [
 requires = ["setuptools"]
 
 
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["*"]
-namespaces = false
+[tool.setuptools]
+packages = ["models", "utils"]
