--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "amphion"
 description = "Amphion"
 license = { text = "MIT License" }
 requires-python = ">=3.10"
-version = "1.0.5"
+version = "1.0.6"
 authors = [{ name = "AndyRightNow", email = "test@test.com" }]
 readme = "README.md"
 keywords = ["TTS", "Speech"]
@@ -46,7 +46,5 @@ requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["*"] 
-namespaces = true
+[tool.setuptools]
+packages = ["amphion.models", "amphion.utils"]
