--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "amphion"
 description = "Amphion"
 license = { text = "MIT License" }
 requires-python = ">=3.10"
-version = "1.0.7"
+version = "1.0.8"
 authors = [{ name = "AndyRightNow", email = "test@test.com" }]
 readme = "README.md"
 keywords = ["TTS", "Speech"]
@@ -44,3 +44,6 @@ dependencies = [
 [build-system]
 requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+namespaces = true
