--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,4 +46,5 @@ requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
+where=["models/tts"]
 namespaces = true
